<resources>
    <string name="app_name">Karaoke Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_song">BÀI HÁT</string>
	<string name="type_singer">CA SĨ</string>
	<string name="type_musician">TÁC GIẢ</string>
	<string name="type_type">THỂ LOẠI</string>
	<string name="type_langague">NGÔN NGỮ</string>
	<string name="type_favourite">YÊU THÍCH</string>
	<string name="type_remix">REMIX</string>
	<string name="type_hotsong">NHẠC HOT</string>
	 <string name="type_youtube">YOUTUBE</string>
	<string name="connect_device">Kết nối thiết bị</string>
	<string name="refresh">Làm mới</string>
	<string name="add_device">Thêm</string>
	<string name="xoa">XÓA</string>
	<string name="uutien">ƯU TIÊN</string>
	<string name="updown">LÊN/XUỐNG</string>
	<string name="exit">THOÁT</string>
	<string name="back">BACK</string>
	<string name="setting">CÀI ĐẶT</string>
	<string name="no_connect">CHƯA KẾT NỐI</string>
	<string name="connected">ĐÃ KẾT NỐI</string>
	<string name="connect_auto">ĐANG KẾT NỐI &#46; &#46; &#46;</string>
	<string name="main_left_1">ĐÃ CHỌN</string>
	<string name="main_left_2">BÀI</string>
	<string name="main_left_3a">đang phát</string>
	<string name="main_left_3b">tạm dừng</string>
	<string name="main_left_3c">bài tiếp theo</string>
	<string name="main_left_4">CA SĨ</string>
	<string name="main_left_5">CHẤM ĐIỂM</string>
	<string name="main_left_5a">TẮT</string>
	<string name="main_left_5b">VUI</string>
	<string name="main_left_5c">CHUYÊN NGHIỆP</string>
	<string name="main_left_6a">TIẾP TỤC</string>
	<string name="main_left_6b">TẠM DỪNG</string>
	<string name="main_left_7">QUA BÀI</string>
	<string name="main_left_8">HÁT LẠI</string>
	<string name="main_right_1">ÂM LƯỢNG</string>
	<string name="main_bottom_1">tắt mở tiếng ca sĩ</string>
	<string name="main_bottom_2">chọn tông nam nữ</string>
	<string name="main_bottom_3">chỉnh chấm điểm</string>
	<string name="search_1a">Gõ \"LD\" để tìm ca khúc \"Lệ Đá\"</string>
	<string name="search_1b">Gõ \"CL\" để tìm ca sĩ \"Cẩm Ly\"</string>
	<string name="search_1c">Gõ \"TCS\" để tìm nhạc sĩ \"Trịnh Công Sơn\"</string>
	<string name="search_1d">Tìm bài YouTube</string>
	<string name="search_3">TẤT CẢ</string>
	<string name="search_4">bài hát</string>
	<string name="search_4a">bài hát trong yêu thích</string>
	<string name="search_4b">bài hát trong playlist</string>
	<string name="search_4c">bài hát trong Dance</string>
	<string name="khac">KHÁC</string>
	<string name="vietnam">VIỆT NAM</string>
	<string name="listdevice">Kết Nối</string>
	<string name="list_device_1">Kết nối thiết bị</string>
	<string name="list_device_2">Làm mới</string>
	<string name="list_device_3">Thêm</string>
	<string name="list_device_4">Kết nối</string>
	<string name="list_device_5">Đã kết nối</string>
	<string name="device_1">Kết nối thiết bị</string>
	<string name="device_2a">Nhập địa chỉ mạng</string>
	<string name="device_2b">Nhập mật khẩu</string>
	<string name="device_3b">Kết nối</string>
	<string name="device_3a">Tiếp tục</string>
	<string name="device_4">Hủy</string>
	<string name="device_5">Xóa</string>
	<string name="device_6">Kết nối</string>
	<string name="device_7">Đã kết nối</string>
	<string name="device_8">Kết nối OK</string>
	<string name="device_9">Chưa kết nối</string>
	<string name="device_10">Đã lưu</string>
	<string name="db_default_language">Nhạc Việt</string>
	<string name="animview_download">Đang tải dữ liệu</string>
	<string name="animview_wait">Xin đợi trong giây lát</string>
	<string name="animview_connect_sk">Xin kết nối lại</string>
	<string name="animview_connect_error">Không thể kết nối</string>
 	<string name="animview_connect_error_1">Sai password</string>
	<string name="connect_nhap_ip">Nhập địa chỉ IP</string>
	<string name="connect_nhap_pass">Nhập mật khẩu kết nối</string>
	<string name="connect_xoa">Xóa</string>
	<string name="tone_nam">NAM</string>
	<string name="tone_nu">NỮ</string>
	<string name="tone_man_nu">NAM/NỮ</string>
	<string name="dance_view_1">Hệ thống sẽ chuyển qua thể loại nhạc dance và</string>
	<string name="dance_view_2">dừng tất cả bài hát karaoke mà bạn đang chọn.</string>
	<string name="dance_view_3">Bạn có muốn chuyển không ?</string>
	<string name="dance_view_4">Hệ thống sẽ chuyển qua chế độ karaoke và dừng</string>
	<string name="dance_view_5">tất cả bài nhạc dance mà bạn đang chọn. </string>
	<string name="dance_view_6">Bạn có muốn chuyển không ?</string>
	<string name="dance_yes">CÓ</string>
	<string name="dance_no">KHÔNG</string>
    <string name="bai_hat">BÀI HÁT</string>
    <string name="ca_si">CA SĨ</string>
    <string name="tac_gia">TÁC GIẢ</string>
    <string name="bai_chon">BÀI ĐÃ CHỌN</string>
    <string name="yeu_thich">YÊU THÍCH</string>
    <string name="the_loai">THỂ LOẠI</string>
    <string name="ngon_ngu">NGÔN NGỮ</string>
    <string name="remix">REMIX</string>
    <string name="but_dachon">ĐÃ CHỌN</string>
    <string name="but_wifi">SETUP WIFI</string>
    <string name="but_tamdung_1">TIẾP TỤC</string>
    <string name="but_tamdung_0">TẠM DỪNG</string>
    <string name="but_quabai">QUA BÀI</string>
    <string name="but_tachloi_0">KHÔNG TÁCH</string>
    <string name="but_tachloi_1">TÁCH LỜI</string>
    <string name="but_amluong">ÂM LƯỢNG</string>
    <string name="but_giong_2">NAM VÀ NỮ</string>
    <string name="but_giong_1">GIỌNG NAM</string>
    <string name="but_giong_0">GIỌNG NỮ</string>
    <string name="but_tocdo">TỐC ĐỘ PHÁT</string>
    <string name="but_tone">THẤP/CAO</string>
    <string name="but_melody">MELODY</string>
    <string name="but_yeuthich">YÊU THÍCH</string>
	<string name="dang_phat">Đang phát</string>
	<string name="tam_dung">Tạm dừng</string>
	<string name="next_song">Bài tiếp theo</string>
	<string name="sreach_baihat">Tìm bài hát theo chữ cái đầu</string>
	<string name="sreach_casi">Tìm ca sĩ theo chữ cái đầu</string>
	<string name="sreach_tacgia">Tìm tác giả theo chữ cái đầu</string>
	<string name="sreach_tatca">TẤT CẢ</string>
	<string name="other">KHÁC</string>
	<string name="icon_connect_view_1">Dò tìm đầu máy</string>
	<string name="icon_connect_view_2">Thêm đầu máy</string>
	<string name="icon_connect_view_3">Cài đặt wifi</string>
	<string name="connect_0">Kết nối và cài đặt</string>
	<string name="connect_1">Kết nối đầu máy</string>
	<string name="connect_2">Dò tìm</string>
	<string name="connect_3">đầu máy</string>
	<string name="connect_4">Thêm</string>
	<string name="connect_5">Cài đặt</string>
	<string name="connect_6">wifi</string>
	<string name="connect_7">* Bạn nên thử thêm đầu máy</string>
	<string name="connect_one_1">Đã lưu</string>
	<string name="connect_one_2">Kết nối OK</string>
	<string name="connect_one_3">Chưa kết nối</string>
	<string name="connect_one_4">KẾT NỐI</string>
	<string name="connect_one_5">NGẮT KẾT NỐI</string>
	<string name="connect_device_1">Nhập mật khẩu</string>
	<string name="connect_device_2">Hủy</string>
	<string name="connect_device_3">Kết nối</string>
	<string name="connect_device_4">* mật khẩu kết nối (4 số) hiện trên màn hình tivi</string>
	<string name="connect_device_5">* bấm SUBTITLE trên remote để xem mật khẩu</string>
	<string name="connect_device_6">Nhập địa chỉ mạng</string>
	<string name="connect_device_7">Tiếp tục</string>
	<string name="connect_device_8">* IP &amp; mật khẩu (4 số) hiện trên đầu máy</string>
	<string name="connect_device_9">* bấm SUBTITLE trên remote để xem IP &amp; mật khẩu</string>
	<string name="connect_device_10">Thêm đầu máy</string>
	<string name="connect_device_11">Nhập mật khẩu</string>
	<string name="connect_device_12">Thông tin đầu máy</string>
	<string name="one_device_1">Kết nối OK</string>
	<string name="one_device_2">Chưa kết nối</string>
	<string name="one_device_3">Đã lưu</string>
	<string name="one_device_4">KẾT NỐI</string>
	<string name="one_device_5">XÓA LƯU</string>
	<string name="one_device_6">CHỌN MODEL</string>
	<string name="one_device_7">ĐẦU MÁY</string>
	<string name="one_device_8">CÀI ĐẶT</string>
	<string name="one_device_9">ĐẦU KARAOKE</string>
	<string name="default_view">MẶC ĐỊNH</string>
	<string name="popup_uppic1">Đang cập nhật dữ liệu&#46; &#46; &#46;</string>
	<string name="popup_uppic1a">Có hình ca sĩ và tác giả mới</string>
	<string name="popup_uppic1a_lyric">Có lời bài hát mới</string>
	<string name="popup_uppic1b">Bạn có muốn cập nhật?</string>
	<string name="popup_uppic1c">Dung lượng:</string>
	<string name="popup_uppic2a">Chưa có hình mới</string>
	<string name="popup_uppic2a_1">Chưa có dữ liệu mới</string>
	<string name="popup_uppic2b">Chúc bạn vui vẻ</string>
	<string name="popup_uppic2c">Chưa có clip mới</string>
	<string name="popup_uppic3a">Không kiểm tra version ảnh được</string>
	<string name="popup_uppic3b">Vui lòng kiểm tra kết nối internet</string>
	<string name="popup_uppic4a">Cập nhật hình ca sĩ và tác giả?</string>
	<string name="popup_uppic4b">Từ đầu máy: </string>
	<string name="popup_uppic4c">Dung lượng:</string>
	<string name="popup_uppic5a">Vui lòng kết nối mạng trước</string>
	<string name="popup_uppic5b">Và dò tìm đầu máy lại</string>
	<string name="popup_uppic6a">Hệ thống đang xử lý dữ liệu</string>
	<string name="popup_uppic6b">Vui lòng chờ trong giây lát</string>
	<string name="popup_uppic7a">Hình ca sĩ và tác giả chưa mới nhất</string>
	<string name="popup_uppic7b">Kết nối với đầu máy để lấy hình</string>
	<string name="popup_uppic7c">Hoặc cập nhật qua mạng trong mục ca sĩ</string>
	<string name="popup_uppic8a">Cập nhật dữ liệu thất bại</string>
	<string name="popup_uppic8b">Hệ thống sẽ dùng dữ liệu gần nhất</string>
	<string name="popup_yes">Có</string>
	<string name="popup_cn">Cập nhật</string>
	<string name="popup_no">Không</string>
	<string name="progress_1">Kiểm tra version &#8230;</string>
	<string name="progress_2">Cập nhật dữ liệu &#8230;</string>
	<string name="progress_3">THOÁT</string>
	<string name="groupview_1">MỜI</string>
	<string name="groupview_2">BẠN</string>
	<string name="groupview_3">KẾT NỐI</string>
	<string name="groupview_4">MỜI</string>
	<string name="groupview_5">BẠN</string>
	<string name="groupview_6">CHỌN BÀI</string>
	<string name="search_daumay">Đang dò tìm đầu máy</string>
	<string name="mac_popup_wifi1">Không kết nối server được</string>
	<string name="mac_popup_wifi2">Vui lòng kiểm tra</string>
	<string name="mac_popup_wifi3">kết nối internet</string>
	<string name="mac_popup_failserver1">Kết nối với server</string>
	<string name="mac_popup_failserver2">xuất hiện lỗi. Không thể</string>
	<string name="mac_popup_failserver3">lấy thông tin kiểm tra.</string>
	<string name="mac_popup_wrong1">Thông tin của bạn không</string>
	<string name="mac_popup_wrong2">phù hợp. Vui lòng nhập</string>
	<string name="mac_popup_wrong3">lại thông tin.</string>
	<string name="mac_popup_wrongfile1">Thông tin của máy không</string>
	<string name="mac_popup_wrongfile2">phù hợp. Không thể</string>
	<string name="mac_popup_wrongfile3">vào ứng dụng.</string>
	<string name="mac_popup_mac1">Không có địa chỉ MAC</string>
	<string name="mac_popup_mac2">Vui lòng kiểm tra</string>
	<string name="mac_popup_mac3">kết nối internet</string>
	<string name="mac_login_user">Nhập user name</string>
	<string name="mac_login_pass">Nhập mật khẩu</string>
	<string name="mac_login_serial">Nhập số serial</string>
	<string name="total_1">Bài Hát</string>
	<string name="total_2">MIDI</string>
	<string name="total_2b">KTV</string>
	<string name="lyric_1">Lời bài hát :</string>
	<string name="lyric_4">Nhạc Sĩ : </string>
	<string name="lyric_5">Lời : </string>
	<string name="myyoutube_help_1">Không Tìm Thấy</string>
	<string name="myyoutube_help_2">Thông Tin YouTube</string>
	<string name="myyoutube_help_3">Mời bạn kết nối mạng</string>
	<string name="myyoutube_help_4">để sử dụng chức năng</string>
	<string name="myyoutube_help_5">Mời bạn tìm bài</string>
	<string name="myyoutube_help_6">hát trên YouTube</string>
</resources>