<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:splitMotionEvents="false" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        
        
        <LinearLayout
            android:id="@+id/layoutGuide"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible" >

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_5"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_6"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <LinearLayout
            android:id="@+id/layoutGuideWifi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible" >

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_3"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_4"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layoutShowThongBao"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="invisible" >

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_1"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/myyoutube_help_2"
                android:textColor="@color/thong_bao_1"
                android:textSize="34sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.8" />
        </LinearLayout>
        
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:scrollbars="none"
        android:splitMotionEvents="false"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <vn.com.sonca.Touch.CustomView.TouchTotalView
            android:id="@+id/totalview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>