<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible" >

        <vn.com.sonca.Lyric.DialogLyricView
            android:id="@+id/dialogLyricView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLyric"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainbg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:alpha="0.1"
                android:background="@android:color/white" />

            <vn.com.sonca.Lyric.LyricBack
                android:id="@+id/lyricBack"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.3" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:alpha="0.1"
                    android:background="@android:color/white" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >
                    
                    <View 
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"/>

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/lyric_text_0"
                        android:gravity="center"
                        android:text=""
                        android:textSize="22sp" />
                    
                    <vn.com.sonca.Lyric.ImageSinger
                        android:id="@+id/imageSinger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >
                        
                        <TextView
                            android:id="@+id/textS"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/lyric_4"
	                        android:textColor="@color/lyric_text_1"
	                        android:textSize="20sp" />

	                    <TextView
	                        android:id="@+id/textSinger"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:singleLine="true"
	                        android:textColor="@color/lyric_text_2"
	                        android:text=""
	                        android:textSize="20sp" />
                    
                     </LinearLayout>
                     
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:orientation="horizontal" >
                        
                        <TextView
                            android:id="@+id/textL"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:text="@string/lyric_5"
	                        android:textColor="@color/lyric_text_1"
	                        android:textSize="20sp" />

	                    <TextView
	                        android:id="@+id/nameLyric"
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:singleLine="true"
	                        android:textColor="@color/lyric_text_2"
	                        android:text=""
	                        android:textSize="20sp" />
                    
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:gravity="bottom"
                        android:orientation="horizontal"
                        android:splitMotionEvents="false" >

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.5"
                            android:gravity="bottom"
                            android:orientation="vertical" >

                            <vn.com.sonca.Lyric.ZoomInView
                                android:id="@+id/ZoomInView"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.5"
                            android:gravity="bottom"
                            android:orientation="vertical" >

                            <vn.com.sonca.Lyric.ZoomOutView
                                android:id="@+id/ZoomOutView"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:id="@+id/viewLine"
                android:layout_width="5dp"
                android:layout_height="fill_parent"
                android:background="@drawable/touch_shape_line_ver" />

            <ScrollView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textTitleLyric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lyric_1"
                        android:textColor="@color/lyric_text_2"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/textLyric"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lyric_text_3"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:textSize="34sp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>